# maven-dependencies

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
maven_dependencies/: __init__.py  cache.py  cli.py  effective.py  git_fetch.py  maven_fetch.py  models.py  pom_parser.py  resolver.py
tests/: test_effective.py  test_parser.py  test_profiles.py
